# Unishox2

./: .gitignore  Banner1.odp  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DB_Compress.xls  DB_Compress.xlsx  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile  Proverbs_Uni.sample  README.md  Unishox_Article_0_1_0.tex  Unishox_Article_2.tex  afl_compile.sh  afl_run.sh  codemeta.json  delta_only_unishox2.c  delta_only_unishox2.h  json2.txt  json3.txt  korean.txt  library.properties  shox++.pad  spanish.txt  test_unishox2.c  test_unishox3.cpp  test_unishox3_alpha.cpp  unishox1.c  unishox1.h  unishox2.c  unishox2.h  unishox_0_1.c
Arduino/: Arduino.ino  unishox2.cpp  unishox2.h
Unishox1/: unishox1.c  unishox1.h
Unishox3_Alpha/: Makefile  bloom.hpp  test_samples.sh  unishox3.cpp  unishox3.h  wordlist_utils.py
Unishox3_Beta/: Makefile  test_samples.sh  unishox3.cpp  unishox3.h
afl_fuzz/: README.md  afl_compile.sh  afl_run.sh  test_fuzz.c
cmake/: compilerFlags.cmake  summary.cmake
demo/: .~lock.Banner2.odp#
doc/: DB_Compress.xls  Unishox_Article_1.tex  Unishox_Article_2.tex
docs/: annotated.html  annotated_dup.js  classes.html  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  group__advanced__api.html  group__advanced__api.js  group__config.html  group__config.js  group__core__api.html  group__core__api.js  group__presets.html  group__presets.js  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  structus__lnk__lst.html  topics.html  topics.js  unishox2_8c.html  unishox2_8c.js  unishox2_8h.html  unishox2_8h.js
html/: classes.html  dir_31ce6986f6e88b2a384b7a266d4dc906.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  index.html  md__c_o_n_t_r_i_b_u_t_i_n_g.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  structus__lnk__lst-members.html  structus__lnk__lst.html  unishox1_8h_source.html  unishox2_8c.html  unishox2_8c.js  unishox2_8h.html  unishox2_8h.js  unishox2_8h_source.html
paper/: paper.bib  paper.md
promo/: Banner1.odp  Banner2.odp  Banner2.ppt  Banner3.odp
sample_texts/: Proverbs_Uni.sample  alice_wland.txt  chinese.txt  emoji.txt  french.txt  hi.txt  hindi.txt  (+7 more)
(+94 files in other folders)
